--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -63,12 +63,13 @@ jobs:
       - name: Run tests
         run: |-
           mkdir -p "${WINEPREFIX}"
+          WINEARCH=win32 wineboot --init
           wineboot --init
+          ls -al "${WINEPREFIX}"/
           python backend/manage.py test backend
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
           WINEPREFIX: /tmp/wine
-          WINEARCH:   win32
 
   backend_test_docker:
     name: backend tests (docker)
