--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ django-stubs-ext
 djangorestframework
 djangorestframework-stubs
 mypy
-psycopg2
+psycopg2-binary
 pycparser
 python-Levenshtein
 responses
