Use /tmp/wine as WINEPREFIX

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -80,10 +80,14 @@ RUN if [ "${ENABLE_GC_WII_SUPPORT}" = "YES" ] ; then \
 
 WORKDIR /backend
 
+ENV WINEPREFIX=/tmp/wine
+
 # create a non-root user & /sandbox with correct ownership
 RUN useradd --create-home user \
     && mkdir -p /sandbox \
-    && chown -R user:user /sandbox
+    && chown -R user:user /sandbox \
+    && mkdir -p "${WINEPREFIX}" \
+    && chown user:user "${WINEPREFIX}"
 
 # switch to non-root user
 USER user
