--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,7 +33,13 @@ jobs:
           sudo apt update
           sudo apt upgrade
       - name: Install libwine
-        run: sudo apt install libwine:i386
+        run: |-
+          sudo apt install \
+          libwine:i386
+          libfaudio0:i386- \
+          libglib2.0-0:i386- \
+          libgstreamer-plugins-base1.0-0:i386- \
+          libgstreamer1.0-0:i386- \
       - name: Install dependencies
         run: |-
           sudo apt install \
