--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,10 +36,10 @@ jobs:
         run: |-
           sudo apt install \
           libwine:i386
-          libfaudio0:i386- \
-          libglib2.0-0:i386- \
-          libgstreamer-plugins-base1.0-0:i386- \
-          libgstreamer1.0-0:i386- \
+          libfaudio0:i386 \
+          libglib2.0-0:i386 \
+          libgstreamer-plugins-base1.0-0:i386 \
+          libgstreamer1.0-0:i386 \
       - name: Install dependencies
         run: |-
           sudo apt install \
