--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Install libwine
         run: |-
           sudo apt install \
+          libmount1:i386 \
+          libselinux1:i386 \
           libfaudio0:i386 \
           libglib2.0-0:i386 \
           libgstreamer-plugins-base1.0-0:i386 \
