--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: 3.9
       - name: Install Python dependencies
         run: pip install -r backend/requirements.txt
-      - name: Add i386 architecture
+      - name: Add i386 architecture and install dependencies
         run: |-
           sudo dpkg --add-architecture i386
           sudo apt update
@@ -37,9 +37,6 @@ jobs:
             libnl-route-3-dev \
             protobuf-compiler \
             wine \
-            mesa-va-drivers- \
-            libosmesa6- \
-            mesa-vdpau-drivers-
       - name: Install nsjail
         run: |-
           git clone --recursive --branch=3.0 https://github.com/google/nsjail
