--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,7 +33,7 @@ jobs:
           sudo add-apt-repository 'deb [arch=amd64] https://mirror.mxe.cc/repos/apt focal main'
           sudo apt -qq update
           sudo apt install -y --allow-downgrades libpcre2-8-0=10.34-7
-          sudo apt install -y wine32
+          sudo apt install -y wine
           sudo apt-get install \
             binutils-mips-linux-gnu \
             libprotobuf-dev \
