--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,11 +29,12 @@ jobs:
         run: pip install -r backend/requirements.txt
       - name: Add i386 architecture and install dependencies
         run: |-
+          sudo dpkg --add-architecture i386
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 86B72ED9
           sudo add-apt-repository 'deb [arch=amd64] https://mirror.mxe.cc/repos/apt focal main'
           sudo apt -qq update
           sudo apt install -y --allow-downgrades libpcre2-8-0=10.34-7
-          sudo apt install -y wine wine32
+          sudo apt install -y wine
           sudo apt-get install \
             binutils-mips-linux-gnu \
             libprotobuf-dev \
