--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -67,6 +67,22 @@ jobs:
           SYSTEM_ENV: GITHUB_WORKFLOW
           WINEPREFIX: /tmp/wine
 
+  backend_test_windows:
+    name: backend tests (windows)
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: Install Python dependencies
+        run: pip install -r backend/requirements.txt
+      - name: Run tests
+        run: |-
+          python backend/manage.py test backend
+        env:
+          SYSTEM_ENV: GITHUB_WORKFLOW
+
   backend_test_docker:
     name: backend tests (docker)
     runs-on: ubuntu-latest
@@ -91,7 +107,12 @@ jobs:
 
   frontend_test:
     name: frontend tests
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.config.os }}
+    strategy:
+      matrix:
+        config:
+          - os: ubuntu-latest
+          - os: windows-latest
     steps:
       - uses: actions/checkout@v2
       - run: cd frontend && yarn
