--- a/backend/compilers/mwcc_233_159/config.json
+++ b/backend/compilers/mwcc_233_159/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "gc_wii",
-    "cc": "wine \"${COMPILER_DIR}/mwcceppc.exe\" -c -proc gekko -nostdinc -stderr ${COMPILER_FLAGS} -o \"${OUTPUT}\" \"${INPUT}\""
+    "cc": "${WINE} \"${COMPILER_DIR}/mwcceppc.exe\" -c -proc gekko -nostdinc -stderr ${COMPILER_FLAGS} -o \"${OUTPUT}\" \"${INPUT}\""
 }
