--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -68,7 +68,7 @@ jobs:
           WINEPREFIX: /tmp/wine
 
   backend_test_windows:
-    name: backend tests (windows)
+    name: backend tests (windows, native)
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -77,6 +77,49 @@ jobs:
           python-version: 3.9
       - name: Install Python dependencies
         run: pip install -r backend/requirements.txt
+      - name: Run tests
+        run: |-
+          python backend/manage.py test backend
+        env:
+          SYSTEM_ENV: GITHUB_WORKFLOW
+
+  backend_test_wsl:
+    name: backend tests (windows, wsl)
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - uses: Vampire/setup-wsl@v1
+      - name: Install Python dependencies
+        run: pip install -r backend/requirements.txt
+      - name: Install dependencies
+        run: |-
+          sudo apt-get update
+          sudo apt-get install -y \
+            binutils-mips-linux-gnu \
+            libprotobuf-dev \
+            libnl-route-3-dev \
+            protobuf-compiler
+      - name: Install nsjail
+        run: |-
+          git clone --recursive --branch=3.0 https://github.com/google/nsjail
+          make -C nsjail
+          sudo cp nsjail/nsjail /usr/bin/
+      - name: Download compilers
+        run: |-
+          ./backend/compilers/download.sh
+          ./backend/compilers/mwcc.sh
+      - name: Install dkp dependencies
+        run: |-
+          mkdir -p bin
+          docker run \
+            -v $(pwd)/bin:/tmp/bin \
+            --entrypoint /bin/sh \
+            devkitpro/devkitppc:20210726 \
+            -c "cp /opt/devkitpro/devkitPPC/bin/powerpc* /tmp/bin"
+          sudo cp bin/powerpc* /usr/bin/
       - name: Run tests
         run: |-
           python backend/manage.py test backend
