--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -86,27 +86,30 @@ jobs:
   backend_test_wsl:
     name: backend tests (windows, wsl)
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: wsl-bash {0}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.9
       - uses: Vampire/setup-wsl@v1
-      - name: Install Python dependencies
-        run: pip install -r backend/requirements.txt
       - name: Install dependencies
+        shell: wsl-bash {0}
         run: |-
-          sudo apt-get update
-          sudo apt-get install -y \
+          apt-get update
+          apt-get install -y \
             binutils-mips-linux-gnu \
             libprotobuf-dev \
             libnl-route-3-dev \
-            protobuf-compiler
+            protobuf-compiler \
+            python3.9 \
+            python3-pip
+      - name: Install Python dependencies
+        run: pip install -r backend/requirements.txt
       - name: Install nsjail
         run: |-
           git clone --recursive --branch=3.0 https://github.com/google/nsjail
           make -C nsjail
-          sudo cp nsjail/nsjail /usr/bin/
+          cp nsjail/nsjail /usr/bin/
       - name: Download compilers
         run: |-
           ./backend/compilers/download.sh
@@ -119,7 +122,7 @@ jobs:
             --entrypoint /bin/sh \
             devkitpro/devkitppc:20210726 \
             -c "cp /opt/devkitpro/devkitPPC/bin/powerpc* /tmp/bin"
-          sudo cp bin/powerpc* /usr/bin/
+          cp bin/powerpc* /usr/bin/
       - name: Run tests
         run: |-
           python backend/manage.py test backend
