--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -91,6 +91,11 @@ jobs:
       run:
         shell: wsl-bash {0}
     steps:
+      - name: Set git to use LF
+        shell: cmd
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
       - uses: actions/checkout@v2
       - uses: Vampire/setup-wsl@v1
       - name: Install dependencies
