--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -121,6 +121,9 @@ jobs:
             python3.9 \
             unzip \
             wget
+      - name: sanity check uname
+        run: |-
+          python3 -c "import platform; print(platform.uname().release)"
       - name: Install Python dependencies
         run: python3.9 -m pip install -r backend/requirements.txt
       - name: Install nsjail
