--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -53,6 +53,8 @@ COPY --from=nsjail /nsjail/nsjail /bin/nsjail
 
 COPY compilers/*.sh /compilers/
 
+COPY compilers/dummy /compilers/dummy
+
 RUN bash /compilers/download.sh
 
 # windows compilers need i386 wine
