--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,6 +37,7 @@ jobs:
           sudo apt install -y wine
           sudo apt-get install \
             binutils-mips-linux-gnu \
+            dos2unix \
             libprotobuf-dev \
             libnl-route-3-dev \
             protobuf-compiler
@@ -92,7 +93,8 @@ jobs:
         run: |-
           docker build backend \
             -t decompme_backend \
-            --build-arg ENABLE_GC_WII_SUPPORT=YES
+            --build-arg ENABLE_GC_WII_SUPPORT=YES \
+            --build-arg ENABLE_PS1_SUPPORT=YES
       - name: Run tests
         run: |-
           mkdir -p sandbox && chmod 777 sandbox
