--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
         # dont install wine32 etc by default
         ENABLE_PS1_SUPPORT: "NO"
         ENABLE_GC_WII_SUPPORT: "NO"
+        ENABLE_NDS_SUPPORT: "NO"
     cap_drop:
       - all
     cap_add:
