--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,8 +49,9 @@ jobs:
       - name: Download compilers
         run: |-
           ./backend/compilers/download.sh
-          ./backend/compilers/mwcc.sh
-      - name: Install dkp dependencies
+          ./backend/compilers/mwccppc.sh
+          ./backend/compilers/mwccarm.sh
+      - name: Install dkp dependencies (ppc)
         run: |-
           mkdir -p bin
           docker run \
@@ -58,7 +59,16 @@ jobs:
             --entrypoint /bin/sh \
             devkitpro/devkitppc:20210726 \
             -c "cp /opt/devkitpro/devkitPPC/bin/powerpc* /tmp/bin"
-          sudo cp bin/powerpc* /usr/bin/
+          sudo mv bin/powerpc* /usr/bin/
+      - name: Install dkp dependencies (arm)
+        run: |-
+          mkdir -p bin
+          docker run \
+            -v $(pwd)/bin:/tmp/bin \
+            --entrypoint /bin/sh \
+            devkitpro/devkitarm:20210726 \
+            -c "cp /opt/devkitpro/devkitARM/bin/arm* /tmp/bin"
+          sudo mv bin/arm* /usr/bin/
       - name: Run tests
         run: |-
           mkdir -p "${WINEPREFIX}"
