scratch preferences modal

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "next-pwa": "^5.3.1",
         "react": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-contenteditable": "^3.3.6",
+        "react-dialog-polyfill": "^1.0.5",
         "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
