Add settings page (#270)
* nav user menu popup

* add settings page

Fixes #61.

* use real links for menu links

* lint

* allow access to UserMenu when signed out

* mark comment

* rename 'Scratch settings' tab

* add platform logo to compileropts + give tab min width

* lint

* toolbar hamburger

* draggable diff bar

* scratch preferences modal

* prevent long names from breaking ui

* no scrollbar on vertical tabs

* AboutScratch overflow fixes

* update right pane width

* responsiveness

* toggle menus on multiple clicks

* temporarily remove settings link

* better scratch name behaviour on small widths

* remove nav from scratch page

* implement export

* menu style changes

* scratch name cursor:text

* lint

* don't use focus-visible

Unsupported on Safari

* show loading spinner in ButtonItems

* shortcuts

* footer credits icon

* add icons to scratch menu

* compile scratch in SSR

* score in AboutScratch

* give the toolbar its colour back

* diff compile changes

* give editable scratch name a hover state

* improve editor preferences ui

* tricolor toolbar,tabs,panels

* reduce diff header blur

* tweak scratch name bg color

* pass tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
         "next": "^11.1.2",
         "next-pwa": "^5.3.1",
         "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react-contenteditable": "^3.3.6",
+        "react-dialog-polyfill": "^1.0.5",
         "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
@@ -30,7 +32,8 @@
         "sass": "^1.42.1",
         "swr": "^1.0.0",
         "use-debounce": "^7.0.0",
-        "use-deep-compare-effect": "^1.6.1"
+        "use-deep-compare-effect": "^1.6.1",
+        "use-persisted-state": "^0.3.3"
     },
     "devDependencies": {
         "@babel/core": "^7.15.8",
