Clean compiler loading logs and allow multiple compilers per dir
Expands the yaml parser to allow for a list format wherein multiple compilers can be specified for the same base directory
Adds old_agbcc as a compiler
Reduces verbosity of some of the logs for loading compilers

--- a/backend/compilers/agbcc/config.json
+++ b/backend/compilers/agbcc/config.json
@@ -1,4 +1,12 @@
-{
-    "platform": "gba",
-    "cc": "\"${COMPILER_DIR}\"/bin/agbcc $COMPILER_FLAGS \"$INPUT\" -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
-}
+[
+    {
+        "name": "agbcc",
+        "platform": "gba",
+        "cc": "\"${COMPILER_DIR}\"/bin/agbcc $COMPILER_FLAGS \"$INPUT\" -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
+    },
+    {
+        "name": "old_agbcc",
+        "platform": "gba",
+        "cc": "\"${COMPILER_DIR}\"/bin/old_agbcc $COMPILER_FLAGS \"$INPUT\" -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
+    }
+]
