--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-simple-resizer": "^2.1.0",
+        "react-timeago": "^6.2.1",
         "sass": "^1.42.1",
         "swr": "^1.0.0",
         "use-debounce": "^7.0.0",
