--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "is-mobile": "^3.0.0",
         "monaco-editor": "^0.29.1",
         "next": "^11.1.2",
+        "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "react": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-contenteditable": "^3.3.6",
