don't run frontend tests on windows runner
buggy github action

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -124,7 +124,7 @@ jobs:
       matrix:
         config:
           - os: ubuntu-latest
-          - os: windows-latest
+          #- os: windows-latest
     steps:
       - uses: actions/checkout@v2
       - run: cd frontend && yarn
