add privacy policy

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -88,7 +88,8 @@
         "import/no-named-as-default-member": "warn",
         "import/no-unused-modules": "warn",
         "css-modules/no-unused-class": "warn",
-        "css-modules/no-undef-class": "warn"
+        "css-modules/no-undef-class": "warn",
+        "react/no-unescaped-entities": "off"
     },
     "overrides": [
         {
