--- a/backend/compilers/agbcc/config.json
+++ b/backend/compilers/agbcc/config.json
@@ -2,11 +2,11 @@
     {
         "name": "agbcc",
         "platform": "gba",
-        "cc": "cc -E -I \"${COMPILER_DIR}\"/include -iquote include -nostdinc -undef \"$INPUT\" | \"${COMPILER_DIR}\"/bin/agbcc -quiet $COMPILER_FLAGS -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
+        "cc": "cc -E -I \"${COMPILER_DIR}\"/include -iquote include -nostdinc -undef \"$INPUT\" | \"${COMPILER_DIR}\"/bin/agbcc $COMPILER_FLAGS -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
     },
     {
         "name": "old_agbcc",
         "platform": "gba",
-        "cc": "cc -E -I \"${COMPILER_DIR}\"/include -iquote include -nostdinc -undef \"$INPUT\" | \"${COMPILER_DIR}\"/bin/old_agbcc -quiet $COMPILER_FLAGS -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
+        "cc": "cc -E -I \"${COMPILER_DIR}\"/include -iquote include -nostdinc -undef \"$INPUT\" | \"${COMPILER_DIR}\"/bin/old_agbcc $COMPILER_FLAGS -o - | arm-none-eabi-as -mcpu=arm7tdmi -o \"$OUTPUT\""
     }
 ]
