--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
       ALLOWED_HOSTS: "backend,localhost,127.0.0.1"
       USE_SANDBOX_JAIL: "on"
       COMPILER_BASE_PATH: /compilers
+      FRONTEND_BASE: http://localhost:8080
     ports:
     - "8000:8000"
     security_opt:
@@ -37,12 +38,10 @@ services:
       - seccomp=unconfined
     volumes:
     - ./backend:/backend
-    - type: tmpfs
-      # Use a separate tmpfs to prevent a rogue jailed process
-      # from filling /tmp on the parent container
-      target: /sandbox/tmp
-      tmpfs:
-        size: 64M
+    tmpfs:
+    # Use a separate tmpfs to prevent a rogue jailed process
+    # from filling /tmp on the parent container
+    - /sandbox/tmp:uid=1000,gid=1000,size=64M,mode=0700
   frontend:
     build: frontend
     environment:
