--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Download compilers
         run: |-
           ./backend/compilers/download.sh
+          ./backend/compilers/clang.sh
           ./backend/compilers/mwccppc.sh
           ./backend/compilers/mwccarm.sh
       - name: Install dkp dependencies (ppc)
