--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -9,6 +9,4 @@ runner:
     cmd: cd frontend && yarn -s run tsc
     format: tsc
   mypy:
-    cmd: cd backend && mypy --show-column-numbers --show-absolute-path
-    errorformat:
-    - "%f:%l:%c: %t%*[^:]: %m"
+    cmd: cd backend && mypy
