--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ django-stubs
 django-stubs-ext
 djangorestframework
 djangorestframework-stubs
-mypy
+mypy==0.930
 psycopg2-binary
 pycparser
 python-Levenshtein
