Add `clang` compiler and `switch` platform (#334)
* Add `switch` as platform

* Add `clang-4.0.1` compiler

* Add `clang-3.9.1` compiler

* Add presets for SMO and BotW (switch)

* Modify download script, fix lint issue, change platform description

Co-authored-by: Ethan Roseman <ethteck@gmail.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Download compilers
         run: |-
           ./backend/compilers/download.sh
+          ./backend/compilers/clang.sh
           ./backend/compilers/mwccppc.sh
           ./backend/compilers/mwccarm.sh
       - name: Install dkp dependencies (ppc)
