backend: Fix Clang compile flags
- add `-x c++` to silence mismatched file extension / C++ mode warnings

- add `-Wl,-Bsymbolic-functions -shared` to fix dynamic linking: Switch
  game executables are shared objects that dynamically link against
  SDK binaries

--- a/backend/compilers/clang-3.9.1/config.json
+++ b/backend/compilers/clang-3.9.1/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "switch",
-    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/bin/clang++\" -target aarch64-linux-elf -fuse-ld=lld -mcpu=cortex-a57+fp+simd+crypto+crc -mno-implicit-float -fstandalone-debug -fPIC -stdlib=libc++ -nostdlib $COMPILER_FLAGS -o \"$OUTPUT\" \"$INPUT\""
+    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/bin/clang++\" -target aarch64-linux-elf -x c++ -fuse-ld=lld -mcpu=cortex-a57+fp+simd+crypto+crc -mno-implicit-float -fstandalone-debug -fPIC -Wl,-Bsymbolic-functions -shared -stdlib=libc++ -nostdlib $COMPILER_FLAGS -o \"$OUTPUT\" \"$INPUT\""
 }
