--- a/backend/compilers/clang-3.9.1/config.json
+++ b/backend/compilers/clang-3.9.1/config.json
@@ -1,4 +1,4 @@
 {
     "platform": "switch",
-    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/bin/clang++\" -target aarch64-linux-elf -fuse-ld=lld -mcpu=cortex-a57+fp+simd+crypto+crc -mno-implicit-float -fstandalone-debug -fPIC -Wl,-Bsymbolic-functions -shared -stdlib=libc++ -nostdlib $COMPILER_FLAGS -o \"$OUTPUT\" \"$INPUT\""
+    "cc": "TOOLROOT=\"$COMPILER_DIR\" \"$COMPILER_DIR/bin/clang++\" -target aarch64-linux-elf --sysroot=\"$COMPILER_DIR/botw-lib-musl-25ed8669943bee65a650700d340e451eda2a26ba\" -fuse-ld=lld -mcpu=cortex-a57+fp+simd+crypto+crc -mno-implicit-float -fstandalone-debug -fPIC -Wl,-Bsymbolic-functions -shared -stdlib=libc++ -nostdlib $COMPILER_FLAGS -o \"$OUTPUT\" \"$INPUT\""
 }
