--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,7 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: pip install -r backend/requirements.txt
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - run: cd backend && poetry install && poetry shell
       - uses: tsuyoshicho/action-mypy@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -35,8 +37,9 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.9
-      - name: Install Python dependencies
-        run: pip install -r backend/requirements.txt
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - run: cd backend && poetry install && poetry shell
       - name: Add i386 architecture and install dependencies
         run: |-
           sudo dpkg --add-architecture i386
@@ -84,7 +87,7 @@ jobs:
         run: |-
           mkdir -p "${WINEPREFIX}"
           wineboot --init
-          python backend/manage.py test backend
+          poetry run backend/manage.py test backend
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
           WINEPREFIX: /tmp/wine
@@ -97,11 +100,12 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.9
-      - name: Install Python dependencies
-        run: pip install -r backend/requirements.txt
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - run: cd backend && poetry install && poetry shell
       - name: Run tests
         run: |-
-          python backend/manage.py test backend
+          poetry run backend/manage.py test backend
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
