--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,7 +39,7 @@ jobs:
           python-version: 3.9
       - name: Install Poetry
         uses: snok/install-poetry@v1
-      - run: cd backend && poetry install && poetry shell
+      - run: cd backend && poetry install
       - name: Add i386 architecture and install dependencies
         run: |-
           sudo dpkg --add-architecture i386
@@ -102,7 +102,7 @@ jobs:
           python-version: 3.9
       - name: Install Poetry
         uses: snok/install-poetry@v1
-      - run: cd backend && poetry install && poetry shell
+      - run: cd backend && poetry install
       - name: Run tests
         run: |-
           poetry run backend/manage.py test backend
