--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y \
     python3-pip \
     python3 \
-    python-is-python3
+    python-is-python3 \
+    python3.9-venv
 
 
 FROM base AS nsjail
